--- a/FoodWasteSalling/Client/Pages/StoreOverview.razor
+++ b/FoodWasteSalling/Client/Pages/StoreOverview.razor
@@ -2,6 +2,7 @@
 @using FoodWasteSalling.Shared.Models;
 @page "/store/{storeId}"
 @inject IOfferService OfferService
+@inject NavigationManager Navigation
 
 
 @if (store is null)
@@ -10,46 +11,53 @@
 }
 else
 {
-	<div class="storeheader">
+	<div class="store-header">
 		<h2>@store.Store.Name</h2>
-		<p>By: @store.Store.Address.City</p>
-		<p>Postnummer: @store.Store.Address.Zip</p>
-		<p>Adresse: @store.Store.Address.Street</p>
+		<div class="store-address">
+			<p><strong>By:</strong> @store.Store.Address.City</p>
+			<p><strong>Postnummer:</strong> @store.Store.Address.Zip</p>
+			<p><strong>Adresse:</strong> @store.Store.Address.Street</p>
+		</div>
 	</div>
+
 }
 
 <div class="search-container">
 	<i class="search-icon fa fa-search"></i>
 	<input class="search-bar"
-		   placeholder="Søg"
-		   type="text"
-		   @bind="storeSearch"
-		   @bind:event="oninput" />
+	placeholder="Søg"
+	type="text"
+	@bind="storeSearch"
+	@bind:event="oninput" />
 </div>
 
 <div class="store-clearances">
 	@foreach (var product in filteredProducts)
 	{
-		<div class="product-offer">
-			<h3>@product.Product.Description</h3>
-			<p>Pris: @product.Offer.OriginalPrice</p>
-			<p>Tilbuds pris: @product.Offer.NewPrice</p>
-			<p>Besparelse i DKK: @product.Offer.Discount</p>
-			<p>Besparelse i %: @product.Offer.Discount%</p>
-
-			<div class="image-container">
-				<img class="product-image"
-					 src="@product.Product.Image"
-					 alt="Product Image"
-					 style="max-width: 100px; max-height: 100px;" />
+		<button class="product-button" @onclick="() => ShowProductDetails(product.Product.Ean)">
+			<div class="product-offer">
+				<div class="product-info">
+					<h3 class="product-title">@product.Product.Description</h3>
+					<p class="original-price"><s>@product.Offer.OriginalPrice kr</s></p>
+					<p class="new-price">@product.Offer.NewPrice kr</p>
+					<p class="discount-amount">Spar @product.Offer.Discount kr (@product.Offer.PercentDiscount%)</p>
+				</div>
+				<div class="image-container">
+					<img class="product-image"
+					src="@product.Product.Image"
+					alt="Product Image" />
+				</div>
 			</div>
-		</div>
+		</button>
+
+
 	}
 </div>
 
 @code {
 	[Parameter] public string StoreId { get; set; } = null!;
 	private EveryFoodWaste store;
+	private string currentUri;
 
 	private List<Clearance> filteredProducts = new List<Clearance>();
 
@@ -57,6 +65,7 @@ else
 	{
 		store = await OfferService.GetStoreByIdAsync(StoreId);
 		filteredProducts = new List<Clearance>(store.Clearances);
+		currentUri = Navigation.Uri;
 	}
 
 	private string _storeSearch; //Private felt som gemmer værdien af inputtet fra søgningen
@@ -70,6 +79,18 @@ else
 			FilterStores();      //Kalder FilterEmployees() for at opdatere listen med det samme
 		}
 	}
+
+	private void ShowProductDetails(string ean)
+	{
+		var currentUri = Navigation.Uri;
+
+		// Kod URL'en korrekt
+		var encodedUri = Uri.EscapeDataString(currentUri);
+
+		// Naviger til produktdetaljesiden med de nødvendige parametre
+		Navigation.NavigateTo($"/productdetails/{ean}/{StoreId}/{encodedUri}");
+	}
+
 
 	private void FilterStores()
 	{
