--- a/FoodWasteSalling/Client/Shared/NavMenu.razor
+++ b/FoodWasteSalling/Client/Shared/NavMenu.razor
@@ -1,6 +1,9 @@
 ﻿<header class="top-navbar">
     <div class="navbar-content">
-        <a href="/" class="navbar-logo">Salling Group</a>
+        <a href="/" class="navbar-logo">
+            <img src="logo.png" alt="Salling Group Logo" class="logo-image" />
+        </a>
+
 
         <nav class="navbar-menu">
             <ul>
