--- a/FoodWasteSalling/Client/Pages/ProuctDetailsView.razor
+++ b/FoodWasteSalling/Client/Pages/ProuctDetailsView.razor
@@ -8,20 +8,20 @@
     <div class="product-header">
         <img class="product-image" src="@product?.Image" alt="Product Image" />
         <div>
-            <h1 class="store-name">@store?.Store.Name</h1>
+            <h1 class="store-name">@store?.Store?.Name</h1>
             <h3 class="product-description">@product?.Description</h3>
         </div>
     </div>
 
     <div class="product-details">
-        <p><strong>Gammel pris:</strong> <s>@clearance?.Offer.OriginalPrice kr</s></p>
-        <p><strong>Ny pris:</strong> @clearance?.Offer.NewPrice kr</p>
-        <p><strong>Besparelse i %:</strong> @clearance?.Offer.PercentDiscount %</p>
-        <p><strong>Besparelse i DKK:</strong> @clearance?.Offer.Discount kr</p>
-        <p><strong>Antal på lager:</strong> @clearance?.Offer.Stock</p>
-        <p><strong>Start tidspunkt:</strong> @clearance?.Offer.StartTime</p>
-        <p><strong>Slut tidspunkt(udløbsdato):</strong> @clearance?.Offer.EndTime</p>
-        <p><strong>Oprettet:</strong> @clearance?.Offer.LastUpdate</p>
+        <p><strong>Gammel pris:</strong> <s>@clearance?.Offer?.OriginalPrice kr</s></p>
+        <p><strong>Ny pris:</strong> @clearance?.Offer?.NewPrice kr</p>
+        <p><strong>Besparelse i %:</strong> @clearance?.Offer?.PercentDiscount %</p>
+        <p><strong>Besparelse i DKK:</strong> @clearance?.Offer?.Discount kr</p>
+        <p><strong>Antal på lager:</strong> @clearance?.Offer?.Stock</p>
+        <p><strong>Start tidspunkt:</strong> @clearance?.Offer?.StartTime</p>
+        <p><strong>Slut tidspunkt(udløbsdato):</strong> @clearance?.Offer?.EndTime</p>
+        <p><strong>Oprettet:</strong> @clearance?.Offer?.LastUpdate</p>
     </div>
 
     <button class="btn-back" @onclick="GoBack">← Tilbage</button>
@@ -44,8 +44,8 @@
     protected override async Task OnInitializedAsync()
     {
         store = await OfferService.GetStoreByIdAsync(StoreId);
-        clearance = store.Clearances.FirstOrDefault(c => c.Product.Ean == Ean);
-        product = clearance?.Product.Ean == Ean ? clearance.Product : null;
+        clearance = store?.Clearances?.FirstOrDefault(c => c.Product?.Ean == Ean);
+        product = clearance?.Product?.Ean == Ean ? clearance.Product : null;
 
         // Dekod det tidligere URI, hvis nødvendigt
         var decodedUri = Uri.UnescapeDataString(CurrentUri);
