--- a/FoodWasteSalling/Client/Pages/ProuctDetailsView.razor
+++ b/FoodWasteSalling/Client/Pages/ProuctDetailsView.razor
@@ -10,6 +10,7 @@
         <div>
             <h1 class="store-name">@store?.Store?.Name</h1>
             <h3 class="product-description">@product?.Description</h3>
+            <p class="product-category">Kategori: @product?.Categories?["da"]</p>
         </div>
     </div>
 
