--- a/FoodWasteSalling/Client/Pages/ProductOverview.razor
+++ b/FoodWasteSalling/Client/Pages/ProductOverview.razor
@@ -117,6 +117,7 @@
 			(x.c.Product.SplitCategoryList?.Any(cat => cat.ToLower().Contains(storeSearchToLower)) ?? false) ||
 			(x.c.Offer.Currency?.ToLower().Contains(storeSearchToLower) ?? false) ||
 			(x.c.Offer.Discount.ToString().Contains(storeSearchToLower)) ||
+			(x.c.Offer.PercentDiscount.ToString().Contains(storeSearchToLower)) ||
 			(x.c.Offer.OriginalPrice.ToString().Contains(storeSearchToLower)) ||
 			(x.c.Offer.NewPrice.ToString().Contains(storeSearchToLower)) ||
 			(x.c.Offer.StartTime.ToString().Contains(storeSearchToLower)) ||
