--- a/FoodWasteSalling/Client/Pages/StoreOverview.razor.css
+++ b/FoodWasteSalling/Client/Pages/StoreOverview.razor.css
@@ -3,7 +3,8 @@
     padding: 1.5rem 2rem;
     border-radius: 12px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-    margin: 2rem auto;
+    margin: 0.1rem auto;
+    margin-bottom: 1rem;
     max-width: 800px;
     font-family: sans-serif;
     text-align: left;
